@@ -3,6 +3,8 @@ Revision history for Perl extension Wx.
 0.60
 	- Added wxSimpleHtmlListBox, wxColourPickerCtrl, wxFontPickerCtrl,
 	  wxFilePickerCtrl, wxDirPickerCtrl, wxAboutDialog (2.7).
+	- Resolved memory leak with classes serived from Wx::PlEvent and
+	  Wx::PlCommandEvent.
 
 0.59  Fri Oct 20 22:05:45 CEST 2006
 	- Fix packaging error in 0.58.
